--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -37,7 +37,6 @@
             margin-left: 300px ;
             font-size: 18px;
             line-height: 1.38;
-
         }
 
         ul {
@@ -66,7 +65,6 @@
             font-family: "Poppins";
             font-weight: 300 ;
             font-size: 16px;
-
         }
 
         ul li a:hover {
@@ -88,9 +86,7 @@
 
     </ul>
 
-    <h2> </h2>
-    <h2> </h2>
-    <h2> Disciplina de Desenvolvimento Web </h2>
+    <h2> <br> Disciplina de Desenvolvimento Web </h2>
     <h2> </h2>
     <p> Seja bem vindo a melhor página de portfólio do segundo ano de TDS já feita! Essa página servirá para mostrar o desenvolvimento do aluno Omar Tehcin El Wanni na matéria de Desenvolvimento Web, lecionada pelo professor e cantor Jefferson Chaves. A disciplina de desenvolvimento web nos ajuda a criar habilidades básicas sobre HTML e CSS, que poderão servir para criar sites incríveis como este que estás a ver nesse exato momento. O desenvolvimento web percorreu um longo caminho desde o início da internet. Da criação da primeira página da web, no início dos anos 90, até as aplicações web dinâmicas e interativas de hoje, a evolução do desenvolvimento web tem sido impulsionada por um esforço constante para solucionar problemas e melhorar a experiência do usuário. No entanto, o caminho para o desenvolvimento web moderno não foi isento de desafios. Neste primeiro post, começaremos dando uma olhada nos primeiros dias do desenvolvimento web e examinaremos os problemas enfrentados pelos desenvolvedores. Ao entender esses desafios, podemos compreender as decisões tomadas pelas soluções de desenvolvimento web moderno e comparar com confiança as mais recentes ofertas na segunda parte desta série. </p>
 
