--- a/Portfolio/sobre-mim.html
+++ b/Portfolio/sobre-mim.html
@@ -37,7 +37,6 @@
             margin-left: 300px ;
             font-size: 18px;
             line-height: 1.38;
-
         }
 
         ul {
@@ -66,11 +65,23 @@
             font-family: "Poppins";
             font-weight: 300 ;
             font-size: 16px;
-
         }
 
         ul li a:hover {
             background-color: rgb(23, 56, 100);
+            color: white;
+        }
+
+        ul2 {
+            color: rgb(11,39,75);
+        }
+
+        ul2 a {
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            font-size: 18px;
+            line-height: 2.38;
             color: white;
         }
 
@@ -88,11 +99,13 @@
 
     </ul>
 
+    <h2> <br> Sobre mim </h2>
     <h2> </h2>
-    <h2> </h2>
-    <h2> Sobre mim </h2>
-    <h2> </h2>
-    <p> Olá, sou Omar Tehcin El Wanni. Nasci na cidade de Foz do Iguaçu-PR no Brasil no dia 03 de outubro de 2009. Gosto de jogar futebol e ir para academia, além de passar horas jogando video games. Comecei a estudar programação no ano de 2024, quando iniciei no Instituto Federal do Paraná da minha cidade natal, porém já havia feito pequenos cursos de robótica antes que tinham me introduzido nesse universo.  </p>
+    <p> Olá, sou Omar Tehcin El Wanni. Nasci na cidade de Foz do Iguaçu-PR no Brasil no dia 03 de outubro de 2009. Gosto de jogar futebol e ir para academia, além de passar horas jogando video games. Comecei a estudar programação no ano de 2024, quando iniciei no Instituto Federal do Paraná da minha cidade natal, porém já havia feito pequenos cursos de robótica antes que haviam me introduzido nesse universo.  </p>
     
+    <ul2>
+        <a href="https://github.com/0marram0" target="_blank"> Aqui está o meu Github! </a>
+    </ul2>
+
 </body>
 </html>
