--- a/Portfolio/projetos.html
+++ b/Portfolio/projetos.html
@@ -65,7 +65,6 @@
             font-family: "Poppins";
             font-weight: 300 ;
             font-size: 16px;
-
         }
 
         ul li a:hover {
@@ -76,11 +75,14 @@
         ul2 {
             color: rgb(11,39,75);
         }
+
         ul2 li a {
-            color: white;
-            text-align: center  ;
-            font-size: 18px;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            font-size: 15px;
             line-height: 1.38;
+            color: white;
         }
 
     </style>
@@ -97,15 +99,19 @@
 
     </ul>
 
-    <h2> </h2>
-    <h2> </h2>
-    <h2> Projetos </h2>
+    <h2> <br> Projetos </h2>
     <h2> </h2>
     <p> Aqui você terá uma visão amplificada dos meus projetos básicos e iniciais: </p>
 
     <ul2>
-        <li> <a href="https://github.com/0marram0/Banco"> Fiz esse banco em PHP! </a> </li>
-        <li> <a href="https://github.com/0marram0/Loteria"> Fiz essa loteria em PHP! </a> </li>
+        <li> <a href="https://github.com/0marram0/DesenvolvimentoWEB/tree/main/Portfolio"> <img src="Portfolio.png" alt="" width="225px"></a> </li>
+        <li> <a href="https://github.com/0marram0/DesenvolvimentoWEB/tree/main/Portfolio" target="_blank"> Fiz um portfólio que você está lendo agora mesmo! </a> </li>
+
+        <li> <a href="https://github.com/0marram0/DesenvolvimentoWEB/tree/main/Desafios/Desafio%201"> <img src="HarryPotter.png" alt="" width="225px"></a> </li>
+        <li> <a href="https://github.com/0marram0/DesenvolvimentoWEB/tree/main/Desafios/Desafio%201" target="_blank"> Fiz um site sobre personagens de Harry Potter! </a> </li>
+
+        <li> <a href="https://github.com/0marram0/DesenvolvimentoWEB/tree/main/Desafios/Desafio%203"> <img src="Bandeiras.png" alt="" width="225px"></a> </li>
+        <li> <a href="https://github.com/0marram0/DesenvolvimentoWEB/tree/main/Desafios/Desafio%203" target="_blank"> Fiz um site com bandeiras apenas com caixas! </a> </li>
     </ul2>
 
 </body>
