--- a/Aulas/aula8.html
+++ b/Aulas/aula8.html
@@ -46,7 +46,7 @@
 
         <div class="bolinha">3</div>
 
-        <div><img class="carrinho" src="carrinho.png" alt=""></div>
+        <div><img class="carrinho" src="aula8_carrinho.png" alt=""></div>
 
     </div>
 
