--- a/index.html
+++ b/index.html
@@ -1,26 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Metadados -->
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+
+        .conteiner {
+            height: 100vh;
+        }
+
+        header {
+            height: 15%;
+            width: 100%;
+            background-color: #4d6466;
+            position: relative;
+
+        }
+
+        .titulo {
+            color: white;
+            text-align: center;
+            padding-top: 45px;
+            padding-left: 0px;
+            margin: 0 auto 0 auto;
+        }
+
+        .subtitulos {
+            font-size: 25px;
+            margin-top: 25px;
+            text-align: center;
+        }
+
+        .logo {
+            float: left;
+        }
+
+        .optimusJaime {
+            height: 150px;
+            width: 150px;
+        }
+    </style>
 </head>
 
-
-<!-- Conteúdo -->
-
 <body>
-    
-    <h1> Treinos intensivos </h1>
-    <p> Treinar da maneira correta e com certa frequência é essencial para nossa vida </p>
 
-    <h2> A maneira correta </h2>
+    <div class="conteiner">
 
-    <h3> Qual frequência? </h3>
-    
+        <header>
+
+            <div class="logo">
+                <img class="optimusJaime" src="OptimusJaime.png" alt="">
+            </div>
+
+            <h1 class="titulo">Optimus Jaime</h1>
+
+        </header>
+
+        <main>
+            <h2 class="subtitulos">Perfil</h2>
+        </main>
+
+        <footer>
+
+        </footer>
+
+    </div>
 </body>
-</html>
 
+</html>
